[package]
name = "msedgedriver-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
quick-xml = {version = "0.23", features = ["serialize"]}
serde = {version = "1", features = ["derive"]}
ureq = "2"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }