[package]
name = "msedgedriver-tool"
version = "0.2.0"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
ureq = { version = "3", default-features = false, features = ["rustls"] }
zip = { version = "4", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.crunch]
inherits = "release"
codegen-units = 1
lto = true
strip = "symbols"
panic = "abort"
opt-level = "z"
